TESTS = add_branch \
	get_leaf \
	draw_BTree-dd \
	clear

check_PROGRAMS = add_branch \
		get_leaf \
		draw_BTree-dd \
		clear

AUTOMAKE_OPTIONS = subdir-objects

add_branch_SOURCES = ../src/BTree-dd.tcc add_branch.cc
get_leaf_SOURCES = ../src/BTree-dd.tcc get_leaf.cc
draw_BTree_dd_SOURCES = ../src/BTree-dd.tcc draw_BTree-dd.cc
clear_SOURCES = ../src/BTree-dd.tcc clear.cc
